--- a/StatusProjetosOTRS_V2.ipynb
+++ b/StatusProjetosOTRS_V2.ipynb
@@ -35,7 +35,7 @@
     "    global cursorORC\n",
     "    global DFProjetos\n",
     "    \n",
-    "    sconexao = \"bismarckhegermann/mapa1234@masrv-scan.agricultura.gov.br/prodmapa.agricultura.gov.br\"\n",
+    "    sconexao = \"usuario/host/server\"\n",
     "    conn = cx_Oracle.connect(sconexao) \n",
     "\n",
     "    print(\"Conectado ao servidor ORACLE - PRODUÇÃO\")\n",
@@ -61,7 +61,7 @@
     "    global cursorORC\n",
     "    global DFProjetos\n",
     "    \n",
-    "    sconexao = \"bismarckhegermann/mapa1234@masrv-scan.agricultura.gov.br/prodmapa.agricultura.gov.br\"\n",
+    "    sconexao = \"usuario/host/server\"\n",
     "    conn = cx_Oracle.connect(sconexao) \n",
     "\n",
     "    print(\"Conectado ao servidor ORACLE - PRODUÇÃO\")\n",
@@ -186,7 +186,7 @@
     "    global con\n",
     "    global cursorMySql\n",
     "    \n",
-    "    con = mysql.connector.connect(host='192.168.2.132', database='otrs', port=3306, user='painel_otrs_apl',password='painel_otrs_apl_1234', buffered=True)\n",
+    "    con = mysql.connector.connect(host='', database='', port=3306, user='',password='', buffered=True)\n",
     "    \n",
     "    if con.is_connected():\n",
     "        db_info = con.get_server_info()\n",
